V0.9.1 Devel
=============
2003-08-21 AP - Using EVT_TEXT for combobox selchange events
2003-08-19 DP - Prevent comments on view columns causing display problems 
			[Marc Persuy].
		Updated wxWindows-pgAdmin3 to resolve FreeBSD 5.1 locale 
			search bug.
2003-08-18 DP - Correctly quote primary key name in Edit Grid. Was preventing
			viewing of data in some tables.
2003-08-17 AP - added REINDEX, frmVacuum->frmMaintenance
2003-08-15 AP - added SSL-support
		Wording: "maintenance" instead of "reorganize"
2003-08-14 DP - Shorten minimum length of rule definition to allow 'NOTHING'
           DP - Add DROP SQL for rule definitions.
2003-08-13 AP - Added VERSION Resource for win32
2003-08-11 DP - Use compiled HTML help file for Help on windows.
           AP - Added "Change column" in table property
		Corrected SQL generation for table property
		Select current item if right click on tree item
		Added win32 version resource
		Corrected missing quoting for FK
2003-08-08 AP - Allow tables without columns for 7.4
		Support of several new 7.4 features
2003-08-08 DP - Added missing helpfile images to Win32 Installer.
2003-08-07 AP - help system cleanups, support of CHM help for win32
		Added missing comment in domain property
2003-08-06 DP - Bumped version number.