@@ -37,23 +37,7 @@
             <pos>10,88</pos>
           </object>
           <object class="wxComboBox" name="cbEncoding">
-            <content>
-              <item>SQL_ASCII</item>
-              <item>EUC_JP</item>
-              <item>EUC_CN</item>
-              <item>EUK_KR</item>
-              <item>EUC_TW</item>
-              <item>UNICODE</item>
-              <item>MULE_INTERNAL</item>
-              <item>LATIN1</item>
-              <item>LATIN2</item>
-              <item>LATIN3</item>
-              <item>LATIN4</item>
-              <item>LATIN5</item>
-              <item>KOI8</item>
-              <item>WIN</item>
-              <item>ALT</item>
-            </content>
+            <content/>
             <selection>0</selection>
             <pos>100,85</pos>
             <size>200,20</size>
