@@ -762,7 +762,7 @@ static unsigned char xml_res_file_4[] = {
 51,50,55,44,51,57,48,60,47,115,105,122,101,62,10,32,32,60,47,111,98,106,
 101,99,116,62,10,60,47,114,101,115,111,117,114,99,101,62,10};
 
-static size_t xml_res_size_5 = 5237;
+static size_t xml_res_size_5 = 4702;
 static unsigned char xml_res_file_5[] = {
 60,63,120,109,108,32,118,101,114,115,105,111,110,61,34,49,46,48,34,32,101,
 110,99,111,100,105,110,103,61,34,85,84,70,45,56,34,63,62,10,60,114,101,
@@ -828,88 +828,64 @@ static unsigned char xml_res_file_5[] = {
 32,32,32,32,32,60,111,98,106,101,99,116,32,99,108,97,115,115,61,34,119,
 120,67,111,109,98,111,66,111,120,34,32,110,97,109,101,61,34,99,98,69,110,
 99,111,100,105,110,103,34,62,10,32,32,32,32,32,32,32,32,32,32,32,32,60,
-99,111,110,116,101,110,116,62,10,32,32,32,32,32,32,32,32,32,32,32,32,32,
-32,60,105,116,101,109,62,83,81,76,95,65,83,67,73,73,60,47,105,116,101,109,
-62,10,32,32,32,32,32,32,32,32,32,32,32,32,32,32,60,105,116,101,109,62,69,
-85,67,95,74,80,60,47,105,116,101,109,62,10,32,32,32,32,32,32,32,32,32,32,
-32,32,32,32,60,105,116,101,109,62,69,85,67,95,67,78,60,47,105,116,101,109,
-62,10,32,32,32,32,32,32,32,32,32,32,32,32,32,32,60,105,116,101,109,62,69,
-85,75,95,75,82,60,47,105,116,101,109,62,10,32,32,32,32,32,32,32,32,32,32,
-32,32,32,32,60,105,116,101,109,62,69,85,67,95,84,87,60,47,105,116,101,109,
-62,10,32,32,32,32,32,32,32,32,32,32,32,32,32,32,60,105,116,101,109,62,85,
-78,73,67,79,68,69,60,47,105,116,101,109,62,10,32,32,32,32,32,32,32,32,32,
-32,32,32,32,32,60,105,116,101,109,62,77,85,76,69,95,73,78,84,69,82,78,65,
-76,60,47,105,116,101,109,62,10,32,32,32,32,32,32,32,32,32,32,32,32,32,32,
-60,105,116,101,109,62,76,65,84,73,78,49,60,47,105,116,101,109,62,10,32,
-32,32,32,32,32,32,32,32,32,32,32,32,32,60,105,116,101,109,62,76,65,84,73,
-78,50,60,47,105,116,101,109,62,10,32,32,32,32,32,32,32,32,32,32,32,32,32,
-32,60,105,116,101,109,62,76,65,84,73,78,51,60,47,105,116,101,109,62,10,
-32,32,32,32,32,32,32,32,32,32,32,32,32,32,60,105,116,101,109,62,76,65,84,
-73,78,52,60,47,105,116,101,109,62,10,32,32,32,32,32,32,32,32,32,32,32,32,
-32,32,60,105,116,101,109,62,76,65,84,73,78,53,60,47,105,116,101,109,62,
-10,32,32,32,32,32,32,32,32,32,32,32,32,32,32,60,105,116,101,109,62,75,79,
-73,56,60,47,105,116,101,109,62,10,32,32,32,32,32,32,32,32,32,32,32,32,32,
-32,60,105,116,101,109,62,87,73,78,60,47,105,116,101,109,62,10,32,32,32,
-32,32,32,32,32,32,32,32,32,32,32,60,105,116,101,109,62,65,76,84,60,47,105,
-116,101,109,62,10,32,32,32,32,32,32,32,32,32,32,32,32,60,47,99,111,110,
-116,101,110,116,62,10,32,32,32,32,32,32,32,32,32,32,32,32,60,115,101,108,
-101,99,116,105,111,110,62,48,60,47,115,101,108,101,99,116,105,111,110,62,
-10,32,32,32,32,32,32,32,32,32,32,32,32,60,112,111,115,62,49,48,48,44,56,
-53,60,47,112,111,115,62,10,32,32,32,32,32,32,32,32,32,32,32,32,60,115,105,
-122,101,62,50,48,48,44,50,48,60,47,115,105,122,101,62,10,32,32,32,32,32,
-32,32,32,32,32,32,32,60,115,116,121,108,101,62,119,120,67,66,95,82,69,65,
-68,79,78,76,89,124,119,120,67,66,95,68,82,79,80,68,79,87,78,60,47,115,116,
-121,108,101,62,10,32,32,32,32,32,32,32,32,32,32,60,47,111,98,106,101,99,
-116,62,10,32,32,32,32,32,32,32,32,32,32,60,111,98,106,101,99,116,32,99,
-108,97,115,115,61,34,119,120,83,116,97,116,105,99,84,101,120,116,34,32,
-110,97,109,101,61,34,115,116,84,101,109,112,108,97,116,101,34,62,10,32,
-32,32,32,32,32,32,32,32,32,32,32,60,108,97,98,101,108,62,84,101,109,112,
-108,97,116,101,60,47,108,97,98,101,108,62,10,32,32,32,32,32,32,32,32,32,
-32,32,32,60,112,111,115,62,49,48,44,49,49,51,60,47,112,111,115,62,10,32,
-32,32,32,32,32,32,32,32,32,60,47,111,98,106,101,99,116,62,10,32,32,32,32,
-32,32,32,32,32,32,60,111,98,106,101,99,116,32,99,108,97,115,115,61,34,119,
-120,67,111,109,98,111,66,111,120,34,32,110,97,109,101,61,34,99,98,84,101,
-109,112,108,97,116,101,34,62,10,32,32,32,32,32,32,32,32,32,32,32,32,60,
 99,111,110,116,101,110,116,47,62,10,32,32,32,32,32,32,32,32,32,32,32,32,
-60,112,111,115,62,49,48,48,44,49,49,48,60,47,112,111,115,62,10,32,32,32,
-32,32,32,32,32,32,32,32,32,60,115,105,122,101,62,50,48,48,44,50,48,48,60,
-47,115,105,122,101,62,10,32,32,32,32,32,32,32,32,32,32,32,32,60,115,116,
-121,108,101,62,119,120,67,66,95,82,69,65,68,79,78,76,89,124,119,120,67,
-66,95,68,82,79,80,68,79,87,78,60,47,115,116,121,108,101,62,10,32,32,32,
-32,32,32,32,32,32,32,60,47,111,98,106,101,99,116,62,10,32,32,32,32,32,32,
-32,32,32,32,60,111,98,106,101,99,116,32,99,108,97,115,115,61,34,119,120,
-83,116,97,116,105,99,84,101,120,116,34,32,110,97,109,101,61,34,115,116,
-80,97,116,104,34,62,10,32,32,32,32,32,32,32,32,32,32,32,32,60,108,97,98,
-101,108,62,80,97,116,104,60,47,108,97,98,101,108,62,10,32,32,32,32,32,32,
-32,32,32,32,32,32,60,112,111,115,62,49,48,44,49,51,56,60,47,112,111,115,
+60,115,101,108,101,99,116,105,111,110,62,48,60,47,115,101,108,101,99,116,
+105,111,110,62,10,32,32,32,32,32,32,32,32,32,32,32,32,60,112,111,115,62,
+49,48,48,44,56,53,60,47,112,111,115,62,10,32,32,32,32,32,32,32,32,32,32,
+32,32,60,115,105,122,101,62,50,48,48,44,50,48,60,47,115,105,122,101,62,
+10,32,32,32,32,32,32,32,32,32,32,32,32,60,115,116,121,108,101,62,119,120,
+67,66,95,82,69,65,68,79,78,76,89,124,119,120,67,66,95,68,82,79,80,68,79,
+87,78,60,47,115,116,121,108,101,62,10,32,32,32,32,32,32,32,32,32,32,60,
+47,111,98,106,101,99,116,62,10,32,32,32,32,32,32,32,32,32,32,60,111,98,
+106,101,99,116,32,99,108,97,115,115,61,34,119,120,83,116,97,116,105,99,
+84,101,120,116,34,32,110,97,109,101,61,34,115,116,84,101,109,112,108,97,
+116,101,34,62,10,32,32,32,32,32,32,32,32,32,32,32,32,60,108,97,98,101,108,
+62,84,101,109,112,108,97,116,101,60,47,108,97,98,101,108,62,10,32,32,32,
+32,32,32,32,32,32,32,32,32,60,112,111,115,62,49,48,44,49,49,51,60,47,112,
+111,115,62,10,32,32,32,32,32,32,32,32,32,32,60,47,111,98,106,101,99,116,
+62,10,32,32,32,32,32,32,32,32,32,32,60,111,98,106,101,99,116,32,99,108,
+97,115,115,61,34,119,120,67,111,109,98,111,66,111,120,34,32,110,97,109,
+101,61,34,99,98,84,101,109,112,108,97,116,101,34,62,10,32,32,32,32,32,32,
+32,32,32,32,32,32,60,99,111,110,116,101,110,116,47,62,10,32,32,32,32,32,
+32,32,32,32,32,32,32,60,112,111,115,62,49,48,48,44,49,49,48,60,47,112,111,
+115,62,10,32,32,32,32,32,32,32,32,32,32,32,32,60,115,105,122,101,62,50,
+48,48,44,50,48,48,60,47,115,105,122,101,62,10,32,32,32,32,32,32,32,32,32,
+32,32,32,60,115,116,121,108,101,62,119,120,67,66,95,82,69,65,68,79,78,76,
+89,124,119,120,67,66,95,68,82,79,80,68,79,87,78,60,47,115,116,121,108,101,
 62,10,32,32,32,32,32,32,32,32,32,32,60,47,111,98,106,101,99,116,62,10,32,
 32,32,32,32,32,32,32,32,32,60,111,98,106,101,99,116,32,99,108,97,115,115,
-61,34,119,120,84,101,120,116,67,116,114,108,34,32,110,97,109,101,61,34,
-116,120,116,80,97,116,104,34,62,10,32,32,32,32,32,32,32,32,32,32,32,32,
-60,112,111,115,62,49,48,48,44,49,51,53,60,47,112,111,115,62,10,32,32,32,
-32,32,32,32,32,32,32,32,32,60,115,105,122,101,62,50,48,48,44,50,48,60,47,
-115,105,122,101,62,10,32,32,32,32,32,32,32,32,32,32,60,47,111,98,106,101,
+61,34,119,120,83,116,97,116,105,99,84,101,120,116,34,32,110,97,109,101,
+61,34,115,116,80,97,116,104,34,62,10,32,32,32,32,32,32,32,32,32,32,32,32,
+60,108,97,98,101,108,62,80,97,116,104,60,47,108,97,98,101,108,62,10,32,
+32,32,32,32,32,32,32,32,32,32,32,60,112,111,115,62,49,48,44,49,51,56,60,
+47,112,111,115,62,10,32,32,32,32,32,32,32,32,32,32,60,47,111,98,106,101,
 99,116,62,10,32,32,32,32,32,32,32,32,32,32,60,111,98,106,101,99,116,32,
-99,108,97,115,115,61,34,119,120,83,116,97,116,105,99,84,101,120,116,34,
-32,110,97,109,101,61,34,115,116,67,111,109,109,101,110,116,34,62,10,32,
-32,32,32,32,32,32,32,32,32,32,32,60,108,97,98,101,108,62,67,111,109,109,
-101,110,116,60,47,108,97,98,101,108,62,10,32,32,32,32,32,32,32,32,32,32,
-32,32,60,112,111,115,62,49,48,44,49,54,51,60,47,112,111,115,62,10,32,32,
-32,32,32,32,32,32,32,32,60,47,111,98,106,101,99,116,62,10,32,32,32,32,32,
-32,32,32,32,32,60,111,98,106,101,99,116,32,99,108,97,115,115,61,34,119,
-120,84,101,120,116,67,116,114,108,34,32,110,97,109,101,61,34,116,120,116,
-67,111,109,109,101,110,116,34,62,10,32,32,32,32,32,32,32,32,32,32,32,32,
-60,112,111,115,62,49,48,48,44,49,54,48,60,47,112,111,115,62,10,32,32,32,
-32,32,32,32,32,32,32,32,32,60,115,105,122,101,62,50,48,48,44,49,53,53,60,
-47,115,105,122,101,62,10,32,32,32,32,32,32,32,32,32,32,32,32,60,115,116,
-121,108,101,62,119,120,84,69,95,77,85,76,84,73,76,73,78,69,60,47,115,116,
-121,108,101,62,10,32,32,32,32,32,32,32,32,32,32,60,47,111,98,106,101,99,
-116,62,10,32,32,32,32,32,32,32,32,60,47,111,98,106,101,99,116,62,10,32,
-32,32,32,32,32,32,32,60,115,101,108,101,99,116,101,100,62,49,60,47,115,
-101,108,101,99,116,101,100,62,10,32,32,32,32,32,32,60,47,111,98,106,101,
-99,116,62,10,32,32,32,32,32,32,60,112,111,115,62,50,44,53,60,47,112,111,
-115,62,10,32,32,32,32,32,32,60,115,105,122,101,62,51,50,51,44,51,53,48,
-60,47,115,105,122,101,62,10,32,32,32,32,32,32,60,111,98,106,101,99,116,
+99,108,97,115,115,61,34,119,120,84,101,120,116,67,116,114,108,34,32,110,
+97,109,101,61,34,116,120,116,80,97,116,104,34,62,10,32,32,32,32,32,32,32,
+32,32,32,32,32,60,112,111,115,62,49,48,48,44,49,51,53,60,47,112,111,115,
+62,10,32,32,32,32,32,32,32,32,32,32,32,32,60,115,105,122,101,62,50,48,48,
+44,50,48,60,47,115,105,122,101,62,10,32,32,32,32,32,32,32,32,32,32,60,47,
+111,98,106,101,99,116,62,10,32,32,32,32,32,32,32,32,32,32,60,111,98,106,
+101,99,116,32,99,108,97,115,115,61,34,119,120,83,116,97,116,105,99,84,101,
+120,116,34,32,110,97,109,101,61,34,115,116,67,111,109,109,101,110,116,34,
+62,10,32,32,32,32,32,32,32,32,32,32,32,32,60,108,97,98,101,108,62,67,111,
+109,109,101,110,116,60,47,108,97,98,101,108,62,10,32,32,32,32,32,32,32,
+32,32,32,32,32,60,112,111,115,62,49,48,44,49,54,51,60,47,112,111,115,62,
+10,32,32,32,32,32,32,32,32,32,32,60,47,111,98,106,101,99,116,62,10,32,32,
+32,32,32,32,32,32,32,32,60,111,98,106,101,99,116,32,99,108,97,115,115,61,
+34,119,120,84,101,120,116,67,116,114,108,34,32,110,97,109,101,61,34,116,
+120,116,67,111,109,109,101,110,116,34,62,10,32,32,32,32,32,32,32,32,32,
+32,32,32,60,112,111,115,62,49,48,48,44,49,54,48,60,47,112,111,115,62,10,
+32,32,32,32,32,32,32,32,32,32,32,32,60,115,105,122,101,62,50,48,48,44,49,
+53,53,60,47,115,105,122,101,62,10,32,32,32,32,32,32,32,32,32,32,32,32,60,
+115,116,121,108,101,62,119,120,84,69,95,77,85,76,84,73,76,73,78,69,60,47,
+115,116,121,108,101,62,10,32,32,32,32,32,32,32,32,32,32,60,47,111,98,106,
+101,99,116,62,10,32,32,32,32,32,32,32,32,60,47,111,98,106,101,99,116,62,
+10,32,32,32,32,32,32,32,32,60,115,101,108,101,99,116,101,100,62,49,60,47,
+115,101,108,101,99,116,101,100,62,10,32,32,32,32,32,32,60,47,111,98,106,
+101,99,116,62,10,32,32,32,32,32,32,60,112,111,115,62,50,44,53,60,47,112,
+111,115,62,10,32,32,32,32,32,32,60,115,105,122,101,62,51,50,51,44,51,53,
+48,60,47,115,105,122,101,62,10,32,32,32,32,32,32,60,111,98,106,101,99,116,
 32,99,108,97,115,115,61,34,110,111,116,101,98,111,111,107,112,97,103,101,
 34,62,10,32,32,32,32,32,32,32,32,60,108,97,98,101,108,62,86,97,114,105,
 97,98,108,101,115,60,47,108,97,98,101,108,62,10,32,32,32,32,32,32,32,32,
