@@ -1,6 +1,7 @@
 V0.9.1 Devel
 =============
 2003-08-21 AP - Using EVT_TEXT for combobox selchange events
+           AP - encoding names read from backend, removed from resource
 2003-08-19 DP - Prevent comments on view columns causing display problems 
 			[Marc Persuy].
 		Updated wxWindows-pgAdmin3 to resolve FreeBSD 5.1 locale 
